...
        android:layout_marginEnd="13dp" />

    <Button
        android:text="@string/add_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddAll"
        android:onClick="AddFood"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />
...
